--- a/src/app.json
+++ b/src/app.json
@@ -1,7 +1,9 @@
 {
   "pages": [
     "pages/index/main",
-    "pages/search/main"
+    "pages/search/main",
+    "pages/detail/main",
+    "pages/list/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
